--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     background: #bccd95;
     font-family: 'Calcy';
     box-shadow: 0 0 10px #768067;
+    padding-right: 10px;
 }
 
 #operatorBtns {
