--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     font-family: Calcy;
     src: url('fonts/digital-7-i.ttf');
 }
-
 #contain {
     width: 400px;
     height: 600px;
@@ -11,7 +10,6 @@
     box-shadow: 20px 20px 20px #696969;
     background: #ffd27f;
 }
-
 #display {
     height: 200px;
     margin: 13px;
@@ -21,21 +19,20 @@
     box-shadow: 0 0 10px #768067;
     padding-right: 10px;
     overflow: hidden;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
-
 #operatorBtns {
     display: flex;
     justify-content: space-around;
     width: 96%;
     margin-left: 2%;
 }
-
 .operator {
     width: 65px;
     box-shadow: 0px 5px 0px #696969;
     background: #4caf50
 }
-
 #numKeys {
     margin-top: 10px;
     width: 75%;
@@ -44,43 +41,37 @@
     margin-left: 5px;
     justify-content: space-around;
 }
-
 #func {
     width: 22%;
     height: 50%;
     margin-left: 74%;
     margin-top: -81.7%;
 }
-
 .num {
     height: 50px;
     width: 65px;
     margin: 10px;
     box-shadow: 0px 5px 0px #696969;
+    background: #eee;
 }
-
 .func {
     height: 50px;
     width: 65px;
     margin: 10px;
     box-shadow: 0px 5px 0px #696969;
 }
-
 .func:active {
     transform: translateY(3px);
     box-shadow: 0px 2px 0px #696969;
 }
-
 .num:active {
     transform: translateY(3px);
     box-shadow: 0px 2px 0px #696969;
 }
-
 .operator:active {
     transform: translateY(3px);
     box-shadow: 0px 2px 0px #696969;
 }
-
 button:active {
     outline-style: none;
 }
